--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 h1 {
   text-align: center;
 }
+
+/*targets the class marker sets background color, height and width*/
+.marker {
+  background-color: red;
+  height: 25px;
+  width: 200px;
+  /*sets all margin-top, margin-right, margin-bottom, and margin-left all to auto.*/
+    margin: auto;
+}
