--- a/style.css
+++ b/style.css
@@ -4,9 +4,15 @@ h1 {
 
 /*targets the class marker sets background color, height and width*/
 .marker {
-  background-color: red;
-  height: 25px;
-  width: 200px;
-  /*sets all margin-top, margin-right, margin-bottom, and margin-left all to auto.*/
-    margin: auto;
+    ;
+    height: 25px;
+    width: 200px;
+/*sets all margin-top, margin-right, margin-bottom, 
+and margin-left all to auto.*/
+/*We have three separate marker div elements, they 
+look like one big rectangle. We are adding some space 
+between them to make it easier to see each element.*/
+    margin: 10px auto;
+    
+    
 }
