--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ h1 {
   text-align: center;
 }
 
+/*targets the class container, sets background color*/
+.container {
+  background-color: rgb(0, 0, 0);
+}
 /*targets the class marker, sets background, height and width*/
 .marker {
     height: 25px;
@@ -16,4 +20,12 @@ between them to make it easier to see each element.*/
 /*marker one is red*/
 .one {
     background-color: #FF0000;
+}
+/*marker two is green*/
+.two {
+    background-color: #00FF00;
+}   
+/*marker three is blue*/
+.three {
+    background-color: #0000FF;
 }
