--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@ h1 {
 /*targets the class container, sets background color*/
 .container {
   background-color: rgb(0, 0, 0);
+  /*add a little more vertical space between markers 
+  and the edge of the container element they're in.
+  This works similarly to the shorthand margin property */
+  padding: 10px 0px;
 }
+
 /*targets the class marker, sets background, height and width*/
 .marker {
     height: 25px;
@@ -17,15 +22,16 @@ look like one big rectangle. We are adding some space
 between them to make it easier to see each element.*/
     margin: 10px auto;
 }
+
 /*marker one is red*/
 .one {
-    background-color: #FF0000;
+    background-color: rgb(255, 0, 0);
 }
 /*marker two is green*/
 .two {
-    background-color: #00FF00;
+    background-color: rgb(0, 127, 0);
 }   
 /*marker three is blue*/
 .three {
-    background-color: #0000FF;
+    background-color: rgb(0, 0, 255);
 }
