--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1 {
 
 /*targets the class container, sets background color*/
 .container {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   /*add a little more vertical space between markers 
   and the edge of the container element they're in.
   This works similarly to the shorthand margin property */
@@ -24,14 +24,18 @@ between them to make it easier to see each element.*/
 }
 
 /*marker one is red*/
+/*updated to yellow*/
+
 .one {
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(255, 255, 0);
 }
 /*marker two is green*/
+/*updated to cyan*/
 .two {
-    background-color: rgb(0, 127, 0);
+    background-color: rgb(0, 255, 255);
 }   
 /*marker three is blue*/
+/*updated to magenta*/
 .three {
-    background-color: rgb(0, 0, 255);
+    background-color: rgb(255, 0, 255);
 }
