--- a/style.css
+++ b/style.css
@@ -26,16 +26,17 @@ between them to make it easier to see each element.*/
 /*marker one is red*/
 /*updated to yellow*/
 /*updated to teritary colors*/
+/*updated to pure black*/
 .one {
-    background-color: rgb(127, 255, 0);
+    background-color: rgb(0, 0, 0);
 }
 /*marker two is green*/
 /*updated to cyan*/
 .two {
-    background-color: rgb(0, 127, 255);
+    background-color: rgb(0, 0, 0);
 }   
 /*marker three is blue*/
 /*updated to magenta*/
 .three {
-    background-color: rgb(255, 0, 127);
+    background-color: rgb(0, 0, 0);
 }
