--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+/*set background color of the h1 element*/
 h1 {
   text-align: center;
+  background-color: rgb(0, 255, 255);
 }
 
 /*targets the class container, sets background color*/
