--- a/style.css
+++ b/style.css
@@ -29,13 +29,14 @@ between them to make it easier to see each element.*/
 /*updated to yellow*/
 /*updated to teritary colors*/
 /*updated to pure black*/
+/*updated to complimentary colors*/
 .one {
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(0, 0, 0);
 }
 /*marker two is green*/
 /*updated to cyan*/
 .two {
-    background-color: rgb(0, 255, 255);
+    background-color: rgb(255, 0, 0);
 }   
 /*marker three is blue*/
 /*updated to magenta*/
