--- a/style.css
+++ b/style.css
@@ -30,16 +30,16 @@ between them to make it easier to see each element.*/
 /*updated to teritary colors*/
 /*updated to pure black*/
 /*updated to complimentary colors*/
-.one {
-    background-color: rgb(0, 0, 0);
+.red {
+    background-color: rgb(255, 0, 0);
 }
 /*marker two is green*/
 /*updated to cyan*/
-.two {
-    background-color: rgb(0, 0, 0);
+.green {
+    background-color: #007F00;
 }   
 /*marker three is blue*/
 /*updated to magenta*/
-.three {
-    background-color: rgb(0, 0, 0);
+.blue {
+    background-color: hsl(240, 100%, 50%);
 }
