--- a/style.css
+++ b/style.css
@@ -25,12 +25,18 @@ between them to make it easier to see each element.*/
     margin: 10px auto;
 }
 
-/*created a sleeve for the marker and worked on opacity*/
+/*targets the class cap, sets background, height and width*/
+.cap {
+  width: 60px;
+  height: 25px;
+}
+
+/*created a sleeve for the marker and worked on 0.5 opacity*/
 .sleeve {
     height: 25px;
     width: 110px;
-    background-color: rgb(255, 255, 255);
-    opacity: 0.5;
+    background-color: rgb(255, 255, 255, 0.5);
+    
 }
 /*marker one is red*/
 /*updated to yellow*/
