--- a/style.css
+++ b/style.css
@@ -97,21 +97,24 @@ be removed to clean up code*/
 function as color arguments.*/
 .blue {
     background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
-    box-shadow: 0 0 10px 0px blue;
+    box-shadow: 0 0 10px 0px hwb(223 13% 51% / 0.8);
 }
 
 /*marker four is yellow*/
+/* with a red/black box shadow*/
 .yellow {
     background: linear-gradient( #F5F50D, #F5A30D, #F5F50D);
-    box-shadow: 0px 0px 20px 1px yellow;
+    box-shadow: 0px 0px 20px 1px rgb(83, 14, 14, 0.8);
 }
 
 /*marker five is purple*/   
 .purple {
     background: linear-gradient(#6D0D68, #F50D9E, #6D0D68);
+    box-shadow: 5px 5px 20px 1px rgb(83, 14, 14, 0.8);
 }
 
 /*marker six is orange*/        
 .orange {
     background: linear-gradient(#F5A30D, #f87306, #F5A30D);
+    box-shadow: 5px 5px 20px 1px rgba(83, 29, 14, 0.8);
 }
